# swiss-coupon-booster

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.base-cnb  README.md  SECURITY.md  cookies.txt.example  docker-compose.build.yml  docker-compose.sidecar.yml  docker-compose.yml  pom.xml
.aiassistant/rules/: GEMINI.md  README.md  spring-boot-rules.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  maven-docker-publish.yml  release.yml
coupon-booster/: Dockerfile  pom.xml  run-image.Dockerfile
coupon-booster/src/main/resources/: application-server.yml  application.yml  banner.txt  datadome-stealth.js  webauthn-disable.js
coupon-booster/src/test/resources/: application-integration-test.yml  application-test.yml
patchright/: Dockerfile  browser.py  config.py  conftest.py  coop.py  entrypoint.sh  main.py  migros.py  pyproject.toml  register_migros_passkey.py  test_health.py
src/main/java/com/patbaumgartner/migroscouponbooster/: CouponBoosterApplication.java
src/main/resources/: application.properties  application.yml  banner.txt  data-2.json  data.json  datadome-stealth.js  httpClientCalls.txt  webauthn-disable.js
src/test/resources/: application-test.yml  webauthn-disable.js
stealth-service/: Dockerfile  browser.py  config.py  conftest.py  coop.py  entrypoint.sh  main.py  migros.py  pyproject.toml  test_coop.py  test_migros.py
(+148 files in other folders)
