[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coupon-booster-patchright"
version = "0.0.1"
requires-python = ">=3.14"
description = "Patchright stealth login sidecar for Swiss Coupon Booster"
dependencies = [
	"fastapi==0.139.0",
	"patchright==1.61.2",
	"uvicorn[standard]==0.50.2",
	"pydantic[email]==2.13.4",
]

[dependency-groups]
dev = [
	"anyio==4.14.2",
	"httpx2>=2.5.0",
	"pytest==9.1.1",
	"pytest-asyncio==1.4.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
